# DeWAFF

./: .gitignore  .gitmodules  CMakeLists.txt  DeWAFF  Makefile  Proyecto  README.md  deWAFF  index.html  notas.md
Doxygen/: Doxyfile  doxygen-awesome.css
algorithms/: How to Use the Algorithm.md
docs/: Doxyfile  _c_make_files_23_822_81_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_822_81_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  _c_make_files_23_822_81_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _c_make_files_23_822_81_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8c.html  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8c.js  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8c_source.html  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8cpp.html  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8cpp.js  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8cpp_source.html  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8c.html  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8c.js  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8c__incl.map  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8c__incl.md5  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8c_source.html  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8cpp.html  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8cpp.js  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8cpp_source.html  _de_w_a_f_f_8cpp.html  _de_w_a_f_f_8cpp_8o_8d.html  _de_w_a_f_f_8cpp_8o_8d_source.html  _de_w_a_f_f_8cpp__incl.map  _de_w_a_f_f_8cpp__incl.md5  _de_w_a_f_f_8cpp_source.html  _de_w_a_f_f_8hpp.html  _de_w_a_f_f_8hpp__dep__incl.map  _de_w_a_f_f_8hpp__dep__incl.md5  _de_w_a_f_f_8hpp__incl.map  _de_w_a_f_f_8hpp__incl.md5  _de_w_a_f_f_8hpp_source.html  _filters_8cpp.html  _filters_8cpp.js  _filters_8cpp_8o_8d.html  _filters_8cpp_8o_8d_source.html  _filters_8cpp__incl.map  _filters_8cpp__incl.md5  _filters_8cpp_source.html  (+240 more)
doxygen/: Doxyfile  header.html
img/: mixkit-virus-infected-cells-3954-medium_DeWAFF.avi
include/: CLI.hpp  DeWAFF.hpp  FileProcessor.hpp  Filters.hpp  Laplacian.hpp  (+11 more)
(+469 files in other folders)
